# dsp-tutorial-suite

./: .gitignore  CMakeLists.txt  Makefile  PROJECT_EXPANSION_PLAN.md  README.md
.github/workflows/: ci.yml
chapters/: 00-overview.md  01-signals-and-sequences.md  02-sampling-and-aliasing.c  02-sampling-and-aliasing.md  03-complex-numbers.c  03-complex-numbers.md  04-lti-systems.md  05-z-transform.md  06-frequency-response.md  07-dft-theory.c  07-dft-theory.md  08-fft-fundamentals.c  08-fft-fundamentals.md  09-window-functions.c  09-window-functions.md  10-digital-filters.c  10-digital-filters.md  11-iir-filter-design.md  12-filter-structures.md  13-spectral-analysis.c  13-spectral-analysis.md  14-psd-welch.c  14-psd-welch.md  15-correlation.c  15-correlation.md  16-overlap-add-save.c  16-overlap-add-save.md  18-fixed-point.c  18-fixed-point.md  19-advanced-fft.c  19-advanced-fft.md  28-real-time-streaming.md  29-optimisation.md  30-putting-it-together.c  30-putting-it-together.md
chapters/00-overview/: README.md  tutorial.md
chapters/01-signals-and-sequences/: README.md  demo.c  tutorial.md
chapters/02-sampling-and-aliasing/: README.md  tutorial.md
chapters/03-complex-numbers/: README.md  tutorial.md
chapters/04-lti-systems/: README.md  demo.c  tutorial.md
chapters/05-z-transform/: README.md  demo.c  tutorial.md
chapters/06-frequency-response/: README.md  tutorial.md
chapters/07-dft-theory/: README.md  tutorial.md
chapters/08-fft-fundamentals/: README.md  demo.c  tutorial.md
chapters/09-window-functions/: README.md  tutorial.md
chapters/10-digital-filters/: README.md  tutorial.md
chapters/11-iir-filter-design/: README.md  tutorial.md
chapters/12-filter-structures/: README.md  tutorial.md
chapters/13-spectral-analysis/: README.md  tutorial.md
chapters/14-psd-welch/: README.md  demo.c  tutorial.md
chapters/15-correlation/: README.md  demo.c  tutorial.md
chapters/16-overlap-add-save/: README.md  demo.c  tutorial.md
chapters/17-multirate-dsp/: README.md  demo.c  tutorial.md
chapters/18-fixed-point/: README.md  demo.c  tutorial.md
chapters/19-advanced-fft/: README.md  demo.c  tutorial.md
chapters/20-hilbert-transform/: README.md  demo.c  tutorial.md
chapters/21-signal-averaging/: README.md  demo.c  tutorial.md
chapters/22-advanced-fir/: README.md  demo.c  tutorial.md
chapters/23-adaptive-filters/: README.md  tutorial.md
chapters/24-linear-prediction/: README.md  tutorial.md
docs/: API.md  ARCHITECTURE.md  README.md
examples/: fft_demo.c  filter_demo.c
include/: advanced_fft.h  correlation.h  dsp_utils.h  fft.h  filter.h  fixed_point.h  gnuplot.h  spectrum.h  streaming.h
reference/: API.md  ARCHITECTURE.md  CHAPTER_INDEX.md
src/: advanced_fft.c  convolution.c  correlation.c  dsp_utils.c  fft.c  filter.c  fixed_point.c  gnuplot.c  iir.c  signal_gen.c  spectrum.c  streaming.c
tests/: test_fft.c  test_filter.c  test_framework.h  test_phase4.c  test_spectrum_corr.c
tools/: generate_plots.c
tutorial/: 00-overview.md  01-complex-numbers.md  02-fft-fundamentals.md  03-window-functions.md  04-digital-filters.md  05-spectral-analysis.md  06-real-time-streaming.md  07-optimisation.md  08-putting-it-together.md
(+22 files in other folders)
